# TestU01

./: .gitignore  README  configure.ac
examples/: Makefile.am  bat1.c  bat2.c  bat3.c  birth1.c  birth2.c  ex1.c  ex3.c  ex4.c  ex7.c  fbirth.c  fcoll.c  my16807.c  my16807.h  scat.c  scat2.c
include/: Makefile.am  Makefile.def  makedef
mylib/: addstr.c  addstr.tex  bitset.c  bitset.tex  chrono.c  chrono.tex  gdef.c  mystr.c  num.c  num.tex  num2.c  num2.tex  tables.c  tables.tex  util.c  util.tex
probdist/: fbar.c  fbar.tex  fdist.c  fdist.tex  finv.c  finv.tex  fmass.c  gofs.c  gofs.tex  gofw.c  gofw.tex  guideprobdist.tex  statcoll.c  wdist.c  wdist.tex
testu01/: Makefile.am  bbattery.c  bbattery.tex  fcho.c  fcong.c  fcong.tex  ffam.c  ffam.tex  ffsr.c  ffsr.tex  fknuth.c  fknuth.tex  fmarsa.c  fmarsa.tex  fmultin.c  fmultin.tex  fnpair.c  fnpair.tex  fres.c  fres.tex  fspectral.c  fspectral.tex  fstring.c  fstring.tex  ftab.c  ftab.tex  fvaria.c  fvaria.tex  fwalk.c  fwalk.tex  rijndael-alg-fst.c  rijndael-alg-fst.tex  scatter.c  scatter.tex  scomp.c  scomp.tex  sentrop.c  sentrop.tex  sknuth.c  sknuth.tex  (+77 more)
